feat: expand JPA lifecycle and criteria parity (#66)
* chore: harden release version policy

* fix: align snapshot release routing

* fix: honor JPA listener exclusions

* fix: order inherited entity callbacks

* fix: respect Java callback overrides

* fix(core): tombstone managed removals

* fix(core): validate delete ids eagerly

* fix(core): complete removal tombstones

* fix(core): propagate cascade removal context

* fix(core): tombstone deleted relationship children

* test(core): cover relationship removal tombstones

* feat: add criteria parameter AST bindings

* fix: resolve criteria parameter path types

* fix: expose criteria parameter type

* fix: retain criteria parameter declaration type

* feat: execute criteria parameters

* feat: bind criteria parameters in aliased queries

* fix: validate criteria parameter bindings

* fix: publish criteria parameter snapshots atomically

* test: cover criteria binding snapshots

* fix: preserve inherited listener callbacks

* fix(core): preserve removed entity lifecycle

* test(core): cover removal callback cascades

* fix(core): reuse managed cascade children

* fix(core): skip unknown session orphans

* test(core): cover orphan callback ordering

* test(core): isolate orphan callback trace

* docs: align release version references

* fix(core): guard recursive removal cascades

* fix(core): key recursive removal by identity

* docs: correct compatibility limitations

* docs: update metrics dependency version

* fix(core): seed stateless orphan removal owner

* docs: describe opt-in persistence session

* fix(core): key composite removal entities

* fix(core): expand composite orphan foreign keys

* fix(core): derive orphan fk width from identity

* fix(core): preserve scalar orphan query input

* refactor: remove unused removal key helper